syntax = "proto3";

package ru.hse.lmsteam.proto.users;

option java_multiple_files = true;
option java_package = "ru.hse.lmsteam.schema.api.users";

import "google/protobuf/wrappers.proto";
import "ru/hse/lmsteam/proto/common/pageable.proto";
import "ru/hse/lmsteam/proto/common/money.proto";

message GetUser {
  message Request {
    string id = 1;
  }

  message Response {
    User user = 1;
  }
}

message UpdateOrCreateUser {
  message Request {
    User user = 1;
  }

  message Response {
    User user = 1;
  }
}

message DeleteUser {
  message Request {
    string id = 1;
  }

  message Response {
    int64 entities_deleted = 1;
  }
}

message GetUsers {
  message Response {
    repeated User users = 1;
  }
}

message GetUserNameList {
  message Response {
    repeated string user_names = 1;
  }
}

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  google.protobuf.StringValue patronymic = 4;

  google.protobuf.StringValue messenger_contact = 5;
  Sex sex = 6;
  string email = 7;
  google.protobuf.StringValue phone_number = 8;

  // notation used: https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/math/BigDecimal.html#toString()
  google.protobuf.StringValue balance = 9;

  google.protobuf.BoolValue is_deleted = 10;
}

enum Sex {
  NOT_INITIALISED = 0;
  MALE = 1;
  FEMALE = 2;
}
